множественные фиксы